--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>GazeTracker</title>
+	<title>MindPeek</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<meta name="description" content="UX testing platform. Lend your eyes and improve the web's UX" />
+	<meta name="keywords" content="ux, user testing, user experience test, user study" />
 	<meta name="author" content="" />
 
   <!-- Facebook and Twitter integration -->
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">GazeTracker</a></div>
+							<div id="colorlib-logo"><a href="index.html">MindPeek</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
@@ -91,7 +91,7 @@
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
 								<h2>Peek into your user's mind</h2>
-								<p>with the GazeTracker platform</p>
+								<p>with the MindPeek platform</p>
 								<p><a href="#subscribe" class="btn btn-primary btn-lg btn-custom">Signup For Beta</a></p>
 							</div>
 						</div>
@@ -100,7 +100,7 @@
 			</div>
 		</section>
 
-		<div class="colorlib-featured">
+		<!-- <div class="colorlib-featured">
 			<div class="row animate-box">
 				<div class="featured-wrap">
 					<div class="owl-carousel">
@@ -128,7 +128,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="colorlib-services colorlib-bg-white" id="features">
 			<div class="container">
@@ -140,7 +140,7 @@
 							</span>
 							<div class="desc">
 								<h3>Continuous Testing</h3>
-								<p>The "Gazetracker" platform connects you with a large community of test users. Allowing you to test your app anytime you need to get instant feedback.</p>
+								<p>The MindPeek platform connects you with a large community of test users. Allowing you to test your app anytime you need to get instant feedback.</p>
 							</div>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
 						<h2>Why clicks are no longer enough?</h2>
 						<p>Clicks allow you to see what decisions your users have made when interacting with your application. However they can't tell you why the user made that decision. 
-							Is the user confused? Tired? Were they looking for the correct button in the wrong place? "Gazetracker" solves this problem by letting you see what your users see.
+							Is the user confused? Tired? Were they looking for the correct button in the wrong place? MindPeek solves this problem by letting you see what your users see.
 							Helping you figure out what they're thinking.
 						</p>
 					</div>
@@ -195,7 +195,7 @@
 			<div class="container">
 				<div class="row mobile-wrap">
 					<div class="col-md-5 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-2.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(images/mobile-2.png);background-size: contain;"></div>
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
@@ -296,31 +296,30 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
 						<h2>Use Cases</h2>
-						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p> -->
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4 animate-box">
 						<article>
-							<h2>Advertisement</h2>
+							<h3>Advertisement</h3>
 							<!-- <p class="admin"><span>May 12, 2018</span></p> -->
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+							<p>With MindPeek see which parts of your ad grab attention and which don't. Get your message across at the right time without pushing unnecessary information.</p>
 							<!-- <p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person1.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p> -->
 						</article>
 					</div>
 					<div class="col-md-4 animate-box">
 						<article>
-							<h2>Entertainment</h2>
+							<h3>Entertainment</h3>
 							<!-- <p class="admin"><span>May 12, 2018</span></p> -->
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+							<p>Too many jump scares? MindPeek will help you see your content through the eyes of your user base.</p>
 							<!-- <p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person2.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p> -->
 						</article>
 					</div>
 					<div class="col-md-4 animate-box">
 						<article>
-							<h2>Product management</h2>
+							<h3>Product management</h3>
 							<!-- <p class="admin"><span>May 12, 2018</span></p> -->
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+							<p>Don't waste time looking for participants and scheduling long test sessions. MindPeek will connect you with test users whenever you need them.</p>
 							<!-- <p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person3.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p> -->
 						</article>
 					</div>
@@ -334,7 +333,7 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center colorlib-heading animate-box">
 						<h2>Ready to transform your application?</h2>
-						<p>Subscribe for the "Gazetracker" beta.</p>
+						<p>Subscribe for the MindPeek beta.</p>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -409,13 +408,13 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-6 colorlib-widget">
-						<h4>About Gazetracker</h4>
-						<p>Gazetracker is a platform that connects user app testers with companies wishing to improve their user experience.</p>
+						<h4>About MindPeek</h4>
+						<p>MindPeek is a platform that connects user app testers with companies wishing to improve their user experience.</p>
 						<p>
 							<ul class="colorlib-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
+								<li><a href="https://twitter.com/NetlytAI"><i class="icon-twitter"></i></a></li>
 								<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
+								<li><a href="https://www.linkedin.com/company/netlyt/"><i class="icon-linkedin"></i></a></li>
 								<!-- <li><a href="#"><i class="icon-dribbble"></i></a></li> -->
 							</ul>
 						</p>
@@ -465,10 +464,10 @@
 					<div class="col-md-6 colorlib-widget">
 						<h4>Contact Info</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<!-- <li>291 South 21th Street, <br> Suite 721 New York NY 10016</li> -->
+							<!-- <li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li> -->
+							<li><a href="mailto:contact@netlyt.com"><i class="icon-envelope"></i> contact@netlyt.com</a></li>
+							<li><a href="https://netlyt.com/"><i class="icon-location4"></i> netlyt.com</a></li>
 						</ul>
 					</div>
 				</div>
