--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MindPeek</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="UX testing platform. Lend your eyes and improve the web's UX" />
+	<meta name="description" content="UX testing platform. Lend your eyes and improve the user experience of millions of web users" />
 	<meta name="keywords" content="ux, user testing, user experience test, user study" />
 	<meta name="author" content="" />
 
@@ -199,7 +199,7 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Eye Heat Maps</h2>
+							<h2>Gaze and Click Heat Maps</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-eye"></i></span>
 								<div class="f-desc">
@@ -218,17 +218,6 @@
 									<p>Discover new ways to better present your most relevant content.</p>
 								</div>
 							</div>
-							<!-- <p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p> -->
-						</div>
-					</div>
-				</div>
-				<div class="row mobile-wrap">
-					<div class="col-md-5 col-md-push-7 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-1.jpg);"></div>
-					</div>
-					<div class="col-md-7 col-md-pull-5 animate-box">
-						<div class="desc">
-							<h2>Click Heat Maps</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
@@ -241,12 +230,30 @@
 									<p>Remove unnecessary items from your user journey. Reducing clicks and helping your users reach their goals faster.</p>
 								</div>
 							</div>
-							<!-- <div class="features">
-								<span class="icon"><i class="icon-beaker"></i></span>
+							<!-- <p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p> -->
+						</div>
+					</div>
+				</div>
+				<div class="row mobile-wrap">
+					<div class="col-md-5 col-md-push-7 animate-box">
+						<div class="mobile-img" style="background-image: url(images/camera3.jpg);"></div>
+					</div>
+					<div class="col-md-7 col-md-pull-5 animate-box">
+						<div class="desc">
+							<h2>Gaze tracking without extra hardware</h2>
+							
+							<div class="features">
+								<span class="icon"><i class="icon-phone"></i></span>
 								<div class="f-desc">
-									<p>.</p>
+									<p>The only hardware you need is your user's laptop, phone or tablet</p>
 								</div>
-							</div> -->
+							</div>
+							<div class="features">
+								<span class="icon"><i class="icon-cogs"></i></span>
+								<div class="f-desc">
+									<p>MindPeek uses machine learning to detect the user's eyes and track them through out the session. Showing you only the final result of where the user looked.</p>
+								</div>
+							</div>
 							<!-- <p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p> -->
 						</div>
 					</div>
@@ -311,7 +318,7 @@
 						<article>
 							<h3>Entertainment</h3>
 							<!-- <p class="admin"><span>May 12, 2018</span></p> -->
-							<p>Too many jump scares? MindPeek will help you see your content through the eyes of your user base.</p>
+							<p>Make your games more immersive, enhance gameplay and game analytics with hardware-less eye tracking.</p>
 							<!-- <p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person2.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p> -->
 						</article>
 					</div>
